@@ -1,7 +1,6 @@
 package com.volfine.common;
 
 import com.jfinal.config.*;
-import com.jfinal.core.JFinal;
 import com.jfinal.kit.PropKit;
 import com.jfinal.plugin.activerecord.ActiveRecordPlugin;
 import com.jfinal.plugin.druid.DruidPlugin;
@@ -17,21 +16,6 @@ import com.volfine.model._MappingKit;
  */
 public class VolfineConfig extends JFinalConfig {
 
-
-    /**
-     * 运行此 main 方法可以启动项目，此main方法可以放置在任意的Class类定义中，不一定要放于此
-     * <p>
-     * 使用本方法启动过第一次以后，会在开发工具的 debug、run config 中自动生成
-     * 一条启动配置，可对该自动生成的配置再添加额外的配置项，例如 VM argument 可配置为：
-     * -XX:PermSize=64M -XX:MaxPermSize=256M
-     */
-    public static void main(String[] args) {
-        /**
-         * 特别注意：IDEA 之下建议的启动方式，仅比 eclipse 之下少了最后一个参数
-         */
-        JFinal.start("src/main/webapp", 8080, "/");
-    }
-
     /**
      * 配置常量
      */
@@ -45,7 +29,7 @@ public class VolfineConfig extends JFinalConfig {
      * 配置路由
      */
     public void configRoute(Routes me) {
-        me.add("/index", IndexController.class, "/index");    // 第三个参数为该Controller的视图存放路径
+        me.add("/", IndexController.class, "/index");    // 第三个参数为该Controller的视图存放路径
     }
 
     public void configEngine(Engine me) {
